* MIME content type can be associated to custom attachments (cf. "UserContentType")
* New URIs "/tools/create-archive" and "/tools/create-media" to create ZIP/DICOMDIR
  from a set of resources

Plugins
-------

* New function "OrthancPluginRegisterErrorCode()" to declare custom error codes
* New function "OrthancPluginRegisterDictionaryTag()" to declare custom DICOM tags
* New "OrthancStarted", "OrthancStopped", "UpdatedAttachment" 
  and "UpdatedMetadata" events in change callbacks

Lua
---

* Optional argument "keepStrings" in "DumpJson()"

Maintenance
-----------

* Full refactoring of the searching features
* C-Move SCP for studies using AccessionNumber tag
* Fix issue 4 (C-Store Association not renegotiated on Specific-to-specific transfer syntax change)
* "/system" URI gives information about the plugins used for storage area and DB back-end
* Plugin callbacks should now return explicit "OrthancPluginErrorCode" instead of integers
* "/tools/create-dicom" can create tags with unknown VR
* "--logdir" flag creates a single log file instead of 3 separate files for errors/warnings/infos
* "--errors" flag lists the error codes that could be returned by Orthanc
* Under Windows, the exit status of Orthanc corresponds to the encountered error code


Version 0.9.4 (2015/09/16)
==========================

* Preview of PDF files encapsulated in DICOM from Orthanc Explorer
* Creation of DICOM files with encapsulated PDF through "/tools/create-dicom"
* "limit" and "since" arguments while retrieving DICOM resources in the REST API
* Support of "deflate" and "gzip" content-types in HTTP requests
* Options to validate peers against CA certificates in HTTPS requests
* New configuration option: "HttpTimeout" to set the default timeout for HTTP requests

Lua
---

* More information about the origin request in the "OnStoredInstance()" and
  "ReceivedInstanceFilter()" callbacks. WARNING: This can result in
  incompatibilities wrt. previous versions of Orthanc.